# ninja-api-bookstore

./: .gitignore  README.md  pyproject.toml
bookstore/: apps.py  asgi.py  base_models.py  models.py  settings.py  urls.py  wsgi.py
bookstore/api/: __init__.py  api.py  schemas.py
bookstore/api/base/: __init__.py  api.py  schemas.py
bookstore/api/books/: __init__.py  api.py
bookstore/management/: __init__.py  seeder.py
bookstore/management/commands/: seed_data.py
bookstore/migrations/: 0001_initial.py
tests/: conftest.py
tests/api/: test_base.py  test_hello.py
tests/management/: test_seeder.py
tests/models/: test_author.py  test_relationships.py
